--- a/src/renders/modal.scss
+++ b/src/renders/modal.scss
@@ -17,6 +17,22 @@
     left: 0;
     background: rgba($color: #000000, $alpha: 0.6);
     z-index: 9999;
+    overflow: hidden;
+    transition: all .3s;
+
+    &.enter-start {
+      opacity: 0;
+    }
+    &.enter-end {
+      opacity: 1;
+    }
+
+    &.leave-start {
+      opacity: 1;
+    }
+    &.leave-end {
+      opacity: 0;
+    }
   }
 
   .feedback-modal-wrap {
@@ -27,6 +43,25 @@
     left: 0;
     z-index: 9999;
     pointer-events: none;
+    transition: all .3s;
+
+    &.enter-start {
+      opacity: 0;
+      transform: scale(0);
+    }
+    &.enter-end {
+      opacity: 1;
+      transform: scale(1);
+    }
+
+    &.leave-start {
+      opacity: 1;
+      transform: scale(1);
+    }
+    &.leave-end {
+      opacity: 0;
+      transform: scale(0);
+    }
   }
 
   .feedback-modal {
