--- a/src/renders/style.scss
+++ b/src/renders/style.scss
@@ -1,4 +1,3 @@
-
 .feedback-container {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   color: #333;
@@ -83,7 +82,7 @@
   // position: absolute;
   right: 0;
   bottom: 0;
-  width: 440px;
+  width: 480px;
   // height: 400px;
   display: none;
 }
@@ -143,8 +142,8 @@
   }
 
   .feedback-modal-header {
-    height: 48px;
-    padding: 13px 20px;
+    height: 38px;
+    padding: 8px 16px;
     font-size: 16px;
     line-height: 22px;
     font-weight: 600;
@@ -152,7 +151,16 @@
   }
 
   .feedback-modal-body {
-    padding: 16px 20px;
+    padding: 16px;
+  }
+
+  .feedback-form-item {
+    margin-bottom: 20px;
+
+    .feedback-form-label {
+      margin-bottom: 8px;
+    }
+
     textarea {
       display: block;
       width: 100%;
@@ -173,11 +181,34 @@
         box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
       }
     }
+
+    .feedback-form-uploader {
+      display: flex;
+      height: 96px;
+      .feedback-form-image {
+        text-align: center;
+        width: 33%;
+        background-color: #f2f2f2;
+        overflow: hidden;
+        svg {
+          display: block;
+          width: 36px;
+          height: 48px;
+          margin: 12px auto 0;
+          color: #a8a8a8;
+        }
+      }
+    }
   }
+
+  .feedback-contact {
+    color: #999;
+  }
+
   .feedback-modal-footer {
     padding: 10px;
     button {
-      width: 140px;
+      width: 80px;
       height: 32px;
       display: block;
       margin: auto;
