--- a/src/renders/style.scss
+++ b/src/renders/style.scss
@@ -182,14 +182,70 @@
       }
     }
 
+    .feedback-input-file {
+      display: none;
+    }
+
     .feedback-form-uploader {
       display: flex;
       height: 96px;
+
       .feedback-form-image {
         text-align: center;
-        width: 33%;
+        width: 140px;
         background-color: #f2f2f2;
         overflow: hidden;
+        border-radius: 4px;
+        position: relative;
+        margin-right: 9px;
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        &:hover {
+          .feedback-image-mask {
+            opacity: 1;
+          }
+        }
+
+        .feedback-image-mask {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-color: rgba($color: #000000, $alpha: 0.6);
+          cursor: pointer;
+          z-index: 9;
+          opacity: 0;
+          transition: 0.2s;
+
+          svg {
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: rgba($color: #fff, $alpha: 0.9);
+          }
+        }
+        
+        img {
+          max-width: 100%;
+          max-height: 100%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      .feedback-uploader-trigger {
+        border: dashed 1px #d9d9d9;
+        cursor: pointer;
+        &:hover {
+          border-color: #40a9ff;
+        }
         svg {
           display: block;
           width: 36px;
