--- a/src/renders/style.scss
+++ b/src/renders/style.scss
@@ -197,7 +197,7 @@
       display: flex;
       height: 96px;
 
-      .feedback-form-image {
+      .feedback-form-image, .feedback-uploader-trigger {
         text-align: center;
         width: 140px;
         background-color: #f2f2f2;
@@ -221,7 +221,6 @@
           width: 100%;
           height: 100%;
           background-color: rgba($color: #000000, $alpha: 0.6);
-          cursor: pointer;
           z-index: 9;
           opacity: 0;
           transition: 0.2s;
@@ -234,6 +233,11 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: rgba($color: #fff, $alpha: 0.9);
+            cursor: pointer;
+
+            &:hover {
+              opacity: 0.8;
+            }
           }
         }
 
