--- a/src/renders/style.scss
+++ b/src/renders/style.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 116px;
   right: 48px;
+  z-index: 99;
 
   &, * {
     padding: 0;
@@ -25,7 +26,6 @@
   z-index: 99;
   background: #fff;
   cursor: pointer;
-  color: #1890ff;
   transition: color 0.3s, box-shadow 0.3s;
   box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
     0 6px 16px 0 rgba(0, 0, 0, 0.08),
@@ -56,8 +56,6 @@
 
   .trigger-icon {
     opacity: 1;
-  }
-  .trigger-icon-normal, .trigger-icon-active {
     top: 0;
     left: 0;
     width: 100%;
@@ -80,8 +78,8 @@
 
   svg {
     display: none;
-    width: 28px;
-    height: 28px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -183,10 +181,6 @@
       &::placeholder {
         color: #bfbfbf;
       }
-      &:focus {
-        border-color: #40a9ff;
-        box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
-      }
     }
 
     .feedback-input-file {
@@ -254,9 +248,6 @@
       .feedback-uploader-trigger {
         border: dashed 1px #d9d9d9;
         cursor: pointer;
-        &:hover {
-          border-color: #40a9ff;
-        }
         svg {
           display: block;
           width: 32px;
@@ -284,14 +275,9 @@
       color: #fff;
       outline: none;
       border: none;
-      background: #1890ff;
       border-radius: 4px;
       cursor: pointer;
       transition: 0.2s;
-
-      &:hover:enabled {
-        background: #40a9ff;
-      }
 
       &:disabled {
         cursor: default;
@@ -388,8 +374,9 @@
   .feedback-alert-icon {
     color: #52c41a;
     display: inline-block;
-    padding-top: 2px;
+    padding-top: 3px;
     padding-right: 4px;
+    height: 19px;
   }
 
   &.feedback-alert-error {
